# mcpo-rs

./: Cargo.toml  LICENSE  README.md  config.schema.json
.github/workflows/: ci.yml
src/: auth.rs  config.rs  connection.rs  main.rs  openapi.rs  server.rs  watcher.rs
src/mcp/: client.rs  mod.rs  sse.rs  stdio.rs  streamable_http.rs  types.rs
