[package]
name = "mcpo"
version = "0.1.0"
edition = "2021"
description = "A simple, secure MCP-to-OpenAPI proxy server written in Rust"
authors = ["xiaofeiTM233"]
license = "MIT"
repository = "https://github.com/xiaofeiTM233/mcpo-rs"

[[bin]]
name = "mcpo"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset", "http2"] }
futures = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
notify = { version = "7", features = ["macos_kqueue"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
http = "1"
bytes = "1"
tracing-actix-web = "0.7"

[target.'cfg(not(target_os = "linux"))'.dependencies]
# For non-linux process management, we use portable alternatives

[profile.release]
opt-level = "s"
lto = false
codegen-units = 4
strip = true
